1999-02-26  Jim Kingdon  <http://www.cyclic.com>

	* options.h: Make RELATIVE_REPOS the default, as in
	../src/options.h.in.

1998-12-29  Jim Kingdon  <http://www.cyclic.com>

	* Makefile.in: Use the getdate.c in ../lib rather than the one
	here.  I don't know whether it compiles with Watcom and/or IBM's
	compiler, but having a copy of getdate.c in this directory has
	proven to be unworkable (the version I am removing still had Y2K
	bugs which were fixed in lib/getdate.c, for example).
	* getdate.c: Removed.

1998-04-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (link_file): Remove; no longer used.

Tue Feb 17 02:31:15 1998  Noel Cragg  <noel@swish.red-bean.com>

	* filesubr.c (last_component): return the top-level directory when
 	asked about the top-level directory.

Tue Jan 13 13:17:33 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* run.c: Adjust run_setup for new calling convention.

	* config.h (DIFF): Remove; no longer used.
	* options.h (DIFF, RCSBIN_DFLT): Remove; no longer used.

Wed Dec 31 10:56:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h, filesubr.c (convert_file): Remove; no longer used
	(except for BROKEN_READWRITE_CONVERSION which doesn't apply).

Sat Dec 27 16:57:41 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h (HAVE_RCS5): Remove; no longer used.

	* config.h (LINES_CRLF_TERMINATED): Remove; no longer used.

Tue Dec 23 08:28:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: Change bug-cvs address from prep.ai.mit.edu to gnu.org
	per email from Martin Hamilton.

Sun Nov 30 18:03:02 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* run.c (run_args): Remove; nowhere used.

Sat Nov 29 22:21:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Remove declaration of getwd; see lib/ChangeLog for
	rationale.

Sun Aug 10 20:42:51 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* pwd.c, pwd.h: Remove $Header; we decided to get rid of these
	some time ago.
